# SCAPE

./: LICENSE  README.md  __init__.py  pyproject.toml
Data/: abbreviations.json
data/: Abbreviations.json  Ablations_abstractness.csv  Ablations_dev.csv  Ablations_per_layer.csv  Eval_results.csv  Optimal_hyperparameters.csv  eval_results.csv
scripts/: run_ablations.py  run_eval.py  run_tuning.py  scape_t_demo.py
src/: __init__.py
src/scape/: __init__.py  __init__2.py  dataset_builder.py  dev.jsonl
src/scape/datasets/: __init__.py  abstractness.csv  dev_complex.txt  dev_simple.txt  gau_simple.txt  test_complex.txt  test_simple.txt  wlc_test_complex.txt  wlc_test_simple.txt
src/scape/scape_t/: __init__.py  ablations.py  core.py  dataset_builder.py  eval.py  resources.py  tuning.py
src/scape/scape_t/data/: Short_Terms_Test.csv
