[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scape"
version = "0.0.1"
description = "Semantic Complexity & Analysis Package (SCAPE)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "transformers==4.31.0",
  "torch",
  "textstat",
  "wordfreq",
  "beautifulsoup4",
  "tqdm",
  "spacy",
  "pandas",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
