[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scape"
version = "0.0.1"
description = "Semantic Complexity & Analysis Package (SCAPE)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "transformers>=4.41,<5",
  "datasets<4.0.0", 
  "huggingface_hub<1.14.0",
  "requests",
  "numpy",
  "nltk",
  "pyarrow",
  "torch",
  "textstat",
  "wordfreq",
  "beautifulsoup4",
  "tqdm",
  "spacy",
  "pandas",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scape.datasets" = ["*.txt", "*.jsonl", "*.csv"]
